--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <main>
-    <img src="../img/mv.png" alt="COACHTECH">
+    <img src="mv.png" alt="COACHTECH">
     <p>最新のテクノロジーで社会課題を解決</p>
     <article>
       <section>
